新增库存查询，人物和部门控件更新为可搜索

--- a/app/src/main/res/layout/activity_db.xml
+++ b/app/src/main/res/layout/activity_db.xml
@@ -102,7 +102,7 @@
                         android:layout_height="wrap_content"
                         android:orientation="horizontal">
 
-                        <Spinner
+                        <com.fangzuo.assist.widget.SpinnerStorage
                             android:id="@+id/sp_storage_out"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
@@ -582,7 +582,7 @@
                 android:layout_height="wrap_content"/>
 
             <include layout="@layout/line_heng" />
-            <com.fangzuo.assist.widget.SpinnerDepartMentUI
+            <com.fangzuo.assist.widget.SpinnerDepartMentUIDlg
                 android:id="@+id/sp_department"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -591,7 +591,7 @@
 
             <include layout="@layout/line_heng" />
 
-            <com.fangzuo.assist.widget.SpinnerPeopleUI
+            <com.fangzuo.assist.widget.SpinnerPeopleUIDlg
                 android:id="@+id/sp_employee"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -600,7 +600,7 @@
 
             <include layout="@layout/line_heng" />
 
-            <com.fangzuo.assist.widget.SpinnerPeopleUI
+            <com.fangzuo.assist.widget.SpinnerPeopleUIDlg
                 android:id="@+id/sp_sign_person"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -609,7 +609,7 @@
 
             <include layout="@layout/line_heng" />
 
-            <com.fangzuo.assist.widget.SpinnerPeopleUI
+            <com.fangzuo.assist.widget.SpinnerPeopleUIDlg
                 android:id="@+id/sp_capture_person"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
