--- a/app/src/main/res/layout/activity_other_in_store.xml
+++ b/app/src/main/res/layout/activity_other_in_store.xml
@@ -589,7 +589,7 @@
 
 
                 <include layout="@layout/line_heng" />
-                <com.fangzuo.assist.widget.SpinnerPeopleUI
+                <com.fangzuo.assist.widget.SpinnerPeopleUIDlg
                     android:id="@+id/sp_capture_person"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -597,7 +597,7 @@
                     app:manspinner_size="20sp" />
                 <include layout="@layout/line_heng" />
 
-                <com.fangzuo.assist.widget.SpinnerPeopleUI
+                <com.fangzuo.assist.widget.SpinnerPeopleUIDlg
                     android:id="@+id/sp_sign_person"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -605,7 +605,7 @@
                     app:manspinner_size="20sp" />
                 <include layout="@layout/line_heng" />
 
-                <com.fangzuo.assist.widget.SpinnerDepartMentUI
+                <com.fangzuo.assist.widget.SpinnerDepartMentUIDlg
                     android:id="@+id/sp_department"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -614,7 +614,7 @@
 
                 <include layout="@layout/line_heng" />
 
-                <com.fangzuo.assist.widget.SpinnerPeopleUI
+                <com.fangzuo.assist.widget.SpinnerPeopleUIDlg
                     android:id="@+id/sp_employee"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -622,7 +622,7 @@
                     app:manspinner_size="20sp" />
                 <include layout="@layout/line_heng" />
 
-                <com.fangzuo.assist.widget.SpinnerPeopleUI
+                <com.fangzuo.assist.widget.SpinnerPeopleUIDlg
                     android:id="@+id/sp_manager"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
