--- a/app/src/main/res/layout/activity_purchase_order.xml
+++ b/app/src/main/res/layout/activity_purchase_order.xml
@@ -586,7 +586,7 @@
                 </RelativeLayout>
                 <include layout="@layout/line_heng"/>
 
-                <com.fangzuo.assist.widget.SpinnerDepartMentUI
+                <com.fangzuo.assist.widget.SpinnerDepartMentUIDlg
                     android:id="@+id/sp_department"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -594,7 +594,7 @@
                     app:manspinner_size="20sp" />
                 <include layout="@layout/line_heng"/>
 
-                    <com.fangzuo.assist.widget.SpinnerPeopleUI
+                    <com.fangzuo.assist.widget.SpinnerPeopleUIDlg
                         android:id="@+id/sp_employee"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -602,7 +602,7 @@
                         app:manspinner_size="20sp" />
 
                 <include layout="@layout/line_heng"/>
-                    <com.fangzuo.assist.widget.SpinnerPeopleUI
+                    <com.fangzuo.assist.widget.SpinnerPeopleUIDlg
                         android:id="@+id/sp_manager"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
