--- a/app/src/main/res/layout/activity_down_data.xml
+++ b/app/src/main/res/layout/activity_down_data.xml
@@ -31,7 +31,8 @@
             android:indeterminateDrawable="@drawable/dialog_loading3"
             android:indeterminateOnly="true" />
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_weight="1"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:textSize="20sp"
             android:gravity="center_vertical"
@@ -40,6 +41,7 @@
             android:text="下载数据"
             android:textColor="@android:color/black"/>
         <TextView
+            android:layout_marginRight="4dp"
             android:id="@+id/tv_tip"
             android:textColor="#4d4b4b"
             android:layout_width="wrap_content"
@@ -53,21 +55,21 @@
         android:layout_width="match_parent"
         android:layout_height="40dp">
         <Button
+            android:id="@+id/btn_downall"
+            android:layout_width="0dp"
+            android:layout_weight="3"
+            android:layout_height="match_parent"
+            android:background="@drawable/btn_check"
+            android:text="下载全部"
+            android:textColor="@android:color/black" />
+        <include layout="@layout/line_shu"/>
+        <Button
             android:id="@+id/btn_down"
             android:layout_width="0dp"
             android:layout_weight="3"
             android:layout_height="match_parent"
             android:background="@drawable/btn_check"
-            android:text="下载"
-            android:textColor="@android:color/black" />
-        <include layout="@layout/line_shu"/>
-        <Button
-            android:id="@+id/btn_downall"
-            android:layout_width="0dp"
-            android:layout_weight="1.5"
-            android:layout_height="match_parent"
-            android:background="@drawable/btn_check"
-            android:text="下载全部"
+            android:text="下载选中"
             android:textColor="@android:color/black" />
     </LinearLayout>
     <com.jude.easyrecyclerview.EasyRecyclerView
