--- a/app/src/main/res/layout/activity_purchase_in_storage.xml
+++ b/app/src/main/res/layout/activity_purchase_in_storage.xml
@@ -145,7 +145,7 @@
                         android:orientation="horizontal">
 
 
-                        <com.fangzuo.assist.widget.SpinnerStorage
+                        <com.fangzuo.assist.widget.SpinnerStorageDlg
                             android:id="@+id/sp_which_storage"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
@@ -628,14 +628,14 @@
             </RelativeLayout>
             <include layout="@layout/line_heng"/>
 
-            <com.fangzuo.assist.widget.SpinnerDepartMentUI
+            <com.fangzuo.assist.widget.SpinnerDepartMentUIDlg
                 android:id="@+id/sp_department"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:manspinner_name="部门"
                 app:manspinner_size="20sp" />
             <include layout="@layout/line_heng"/>
-            <com.fangzuo.assist.widget.SpinnerPeopleUI
+            <com.fangzuo.assist.widget.SpinnerPeopleUIDlg
                 android:id="@+id/sp_capture_person"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -643,21 +643,21 @@
                 app:manspinner_size="20sp" />
 
             <include layout="@layout/line_heng"/>
-            <com.fangzuo.assist.widget.SpinnerPeopleUI
+            <com.fangzuo.assist.widget.SpinnerPeopleUIDlg
                 android:id="@+id/sp_sign_person"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:manspinner_name="验收"
                 app:manspinner_size="20sp"/>
             <include layout="@layout/line_heng"/>
-            <com.fangzuo.assist.widget.SpinnerPeopleUI
+            <com.fangzuo.assist.widget.SpinnerPeopleUIDlg
                 android:id="@+id/sp_employee"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:manspinner_name="业务员"
                 app:manspinner_size="20sp" />
             <include layout="@layout/line_heng"/>
-            <com.fangzuo.assist.widget.SpinnerPeopleUI
+            <com.fangzuo.assist.widget.SpinnerPeopleUIDlg
                 android:id="@+id/sp_manager"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
