--- a/app/src/main/res/layout/activity_sale_order.xml
+++ b/app/src/main/res/layout/activity_sale_order.xml
@@ -636,7 +636,7 @@
             </RelativeLayout>
             <include layout="@layout/line_heng"/>
 
-            <com.fangzuo.assist.widget.SpinnerDepartMentUI
+            <com.fangzuo.assist.widget.SpinnerDepartMentUIDlg
                 android:id="@+id/sp_department"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -644,7 +644,7 @@
                 app:manspinner_size="20sp"  />
             <include layout="@layout/line_heng"/>
 
-            <com.fangzuo.assist.widget.SpinnerPeopleUI
+            <com.fangzuo.assist.widget.SpinnerPeopleUIDlg
                 android:id="@+id/sp_employee"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -652,7 +652,7 @@
                 app:manspinner_size="20sp"  />
             <include layout="@layout/line_heng"/>
 
-            <com.fangzuo.assist.widget.SpinnerPeopleUI
+            <com.fangzuo.assist.widget.SpinnerPeopleUIDlg
                 android:id="@+id/sp_manager"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
