--- a/app/src/main/res/layout/autolayout.xml
+++ b/app/src/main/res/layout/autolayout.xml
@@ -6,6 +6,7 @@
         android:layout_width="match_parent"
         android:orientation="horizontal"
         android:id="@+id/ll"
+        android:layout_margin="2dp"
         android:layout_height="wrap_content">
 
         <TextView
@@ -14,7 +15,7 @@
             android:layout_weight="1"
             android:layout_height="wrap_content"
             android:text="11111111111111"
-            android:textSize="16sp"/>
+            android:textSize="18sp"/>
         <View
             android:layout_width="1dp"
             android:layout_height="match_parent"
@@ -27,7 +28,7 @@
             android:layout_weight="1"
             android:layout_height="wrap_content"
             android:text="111111111111111111"
-            android:textSize="16sp"/>
+            android:textSize="18sp"/>
     </LinearLayout>
 
 </LinearLayout>
