--- a/app/src/main/res/layout/fragment_purchase.xml
+++ b/app/src/main/res/layout/fragment_purchase.xml
@@ -2,14 +2,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Fragment.PurchaseFragment">
 
-    <GridView
-        android:layout_marginTop="10dp"
-        android:id="@+id/gv"
-        android:numColumns="3"
+    <com.jude.easyrecyclerview.EasyRecyclerView
+        android:id="@+id/ry_data"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:background="@android:color/white"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:layout_margin="4dp"
+        android:foreground="?android:attr/selectableItemBackground"
+        app:recyclerClipToPadding="true"
+        app:recyclerPaddingTop="2dp"
+        app:scrollbarStyle="insideOverlay" />
 
 
 </RelativeLayout>
