--- a/app/src/main/res/layout/item_p1one.xml
+++ b/app/src/main/res/layout/item_p1one.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools">
 
     <LinearLayout
+        android:id="@+id/ll_bg"
         android:orientation="vertical"
         android:layout_centerInParent="true"
         android:gravity="center"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <ImageView
             android:layout_marginTop="10dp"
@@ -19,10 +20,11 @@
             android:layout_height="55dp" />
         <TextView
             android:id="@+id/tv"
-            tools:text="入库单"
+            tools:text="单据名称"
             android:layout_marginBottom="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="20sp"/>
+        <include layout="@layout/line_heng"/>
     </LinearLayout>
 </RelativeLayout>
